css/jumoel.scss
---
---

$text-color: #2E2D2D;
$brand-color: #3498db;
$brand-color-accent: #8e44ad;

$serif-stack: "charter", Garamond, serif;
$sans-serif-stack: "-apple-system",
               BlinkMacSystemFont,
               "Segoe UI",
               Roboto,
               Oxygen,
               Ubuntu,
               Cantarell,
               "Open Sans",
               "Helvetica Neue",
               "Helvetica",
               sans-serif;

body {
  margin: 0.5em 0 2em;

  font-family: $serif-stack;
  font-size: 16px;
  line-height: 1.4em;
  color: $text-color;
  background-color: #ecf0f1;
}

$list-padding: 1.2em;
ul {
  list-style-type: none;
  padding-left: $list-padding;

  li {
    position: relative;

    &:before {
      content: "\2022";
      position: absolute;
      left: -$list-padding;
      font-size: 14px;
      color: lighten($text-color, 20%);
    }
  }
}

ol {
  padding-left: $list-padding;
}

.container {
  border-top: 5px solid $brand-color;
  background-color: #fff;
  padding: 1rem 4rem;

  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.26);
}

a, a:visited {
  text-decoration: none;
}

a, a code {
  color: $brand-color;
}

a:visited, a:visited code {
  color: $brand-color-accent;
}

a:hover, a:active {
  color: #2980b9;
  text-decoration: underline;
}

code {
  background-color: transparent;
  color: #5B6153;
  position: relative;
  margin: auto -2px;
  letter-spacing: -0.02em;
}

h1 code {
  color: inherit;
  font-weight: 600;
}

code, pre {
  font-family: "source-code", "Monaco", monospace;
  line-height: 1.4em;
}

pre {
  background-color: transparent;
  border-width: 0px;
  border-radius: 0px;
  tab-size: 2;
}

.header-site {
  h1 {
    text-transform: lowercase;
    font-style: italic;
    color: #999;
    font-size: 18px;
  }

  a {
    color: inherit;
    text-decoration: inherit;
  }
}

.content-main {
  padding-bottom: 2em;
}

.post-separator {
  width: 50%;
  margin: 3em auto;
}

.post-list, .nav-list {
    padding: 0;
    list-style-type: none;

    li:before {
      content: "";
    }

    .date {
      font-size: 0.85em;
    }
}

.nav-side {
  font-family: $sans-serif-stack;
  font-weight: 200;
  font-size: 16px;
  padding-bottom: 3em;

  .date {
    display: block;
    color: #555;
    padding-bottom: 1em;
  }

  section + section
  {
    margin-top: 2em;
  }
}

.post {
  h2 {
    font-weight: bold;
    font-size: 24px;
    font-family: $sans-serif-stack;
  }
}

.post-header {
  h1 {
    font-weight: bold;
    font-size: 28px;
    font-family: $sans-serif-stack;

    code {
      font-size: 0.95em;
      letter-spacing: -1px;
    }
  }

  a {
    color: inherit;
    text-decoration: none;
  }

  a:hover:before {
    content: "#";
    position: absolute;
    left: -0.5em;
    color: lighten($text-color, 70%);
  }
}

.post-meta {
  font-size: 14px;
}

.footnotes {
  font-size: 14px;
  margin-top: 4rem;
  padding-top: 1rem;
  color: lighten($text-color, 30%);

  p {
    color: inherit;
  }
}

.hire-me {
  margin: -0.8em;
  padding: 0.8em;

  border: 1px solid $brand-color;
  border-radius: 0.25rem;
  background-color: lighten($brand-color, 43%);

  p {
    margin-bottom: 0;
  }
}

